# F3EO

./: .gitignore  .gitmodules  README.md  README_CN.md  paper_draft.md  pyproject.toml  resignation_report.md  test_report.py
config/: cifar10.toml  cifar10_ada_rmsuon.toml  cifar10_adafisher.toml  cifar10_adamw.toml  cifar10_adamw_1e-2.toml  cifar10_adamw_pi.toml  cifar10_ars_sync.toml  cifar10_f3eo_no_scheduler.toml  cifar10_f3epi.toml  cifar10_f3ew.toml  cifar10_f3ewd.toml  cifar10_hadron_oewc.toml  cifar10_muon.toml  cifar10_nuclear_muon.toml  cifar10_pi_muon_adafisher.toml  cifar10_pi_muon_kfac.toml  cifar10_rmsuon.toml  cl_fog.toml  cl_stream.toml  lrp_cifar10_ars2_neo_agasi_20e.toml  lrp_cifar10_ars2_neo_base_50e.toml  lrp_cifar10_ars2_neo_sync_rho01_50e.toml  lrp_cifar10_muon_50e.toml  lrp_wikitext2_ars2_neo_agasi_5e.toml  mnist_fashion_cl_fiena.toml  mnist_fashion_cl_fog.toml  mnist_fashion_cl_pi_zpd.toml  wikitext2.toml  wikitext2_adaf3epi.toml  wikitext2_adafisher_baseline.toml  wikitext2_adamw_1e-4.toml  wikitext2_adamw_1e-4_smallbatch.toml  wikitext2_adamw_1e-4_tiny.toml  wikitext2_adamw_1e-5.toml  wikitext2_adamw_pi.toml  wikitext2_diag_hadron_oewc.toml  wikitext2_f3epi_0.5beta.toml  wikitext2_f3epi_adax.toml  wikitext2_f3epi_gamma0.5.toml  wikitext2_f3epi_grad_accum.toml  (+23 more)
docs/: architecture_v2.md
model/: __init__.py  embeddings.py  nano_gpt.py  resnet.py  resnet_cifar.py  resnet_mnist.py  swin.py
optimizer/: F3EO.py  F3EO_raw.py  F3EPI.py  F3EPI_AdaX.py  F3EPI_RMS.py  F3EW.py  F3EWD.py  __init__.py  ada_fisher.py  ada_hessian.py  ada_muon.py  adaf3e.py  (+26 more)
(+129 files in other folders)
